--- a/html/upgrade.html
+++ b/html/upgrade.html
@@ -23,8 +23,8 @@
         <div style="display: flex; align-items: center; gap: 2rem;">
             <img src="/logo.png" alt="FilaMan Logo" class="logo">
             <div class="logo-text">
-                <h1>FilaMan<span class="version"></span></h1>
-                <h4>Filament Management Tool</h4>
+                <h1>FilaMan Lite<span class="version"></span></h1>
+                <h4>Filament Management Tool - Light Version</h4>
             </div>
         </div>
         <nav style="display: flex; gap: 1rem;">
@@ -44,7 +44,6 @@
             <div class="ram-status" id="ramStatus"></div>
         </div>
     </div>
-
 <!-- head -->
     
     <div class="content">
