[code] removed OctoPrint and Bambu Interface

--- a/html/header.html
+++ b/html/header.html
@@ -30,7 +30,7 @@
         <nav style="display: flex; gap: 1rem;">
             <a href="/">Start</a>
             <a href="/waage">Scale</a>
-            <a href="/spoolman">Spoolman/Bambu</a>
+            <a href="/spoolman">Spoolman</a>
             <a href="/about">About</a>
             <a href="/upgrade">Upgrade</a>
         </nav>
