--- a/html/spoolman.html
+++ b/html/spoolman.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FilaMan - Filament Management Tool</title>
+    <title>FilaMan Lite - FilaMan NFC Tool</title>
     <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <script>
@@ -29,15 +29,17 @@
         </div>
         <nav style="display: flex; gap: 1rem;">
             <a href="/">Start</a>
-            <a href="/waage">Scale</a>
+            <!--<a href="/waage">Scale</a>-->
             <a href="/spoolman">Spoolman</a>
             <a href="/about">About</a>
             <a href="/upgrade">Upgrade</a>
         </nav>
         <div class="status-container">
+            <!--
             <div class="status-item">
                 <span class="status-dot" id="bambuDot"></span>B
             </div>
+            -->
             <div class="status-item">
                 <span class="status-dot" id="spoolmanDot"></span>S
             </div>
