--- a/html/waage.html
+++ b/html/waage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FilaMan - Filament Management Tool</title>
+    <title>FilaMan Lite - FilaMan NFC Tool</title>
     <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <script>
@@ -29,15 +29,17 @@
         </div>
         <nav style="display: flex; gap: 1rem;">
             <a href="/">Start</a>
-            <a href="/waage">Scale</a>
+            <!--<a href="/waage">Scale</a>-->
             <a href="/spoolman">Spoolman</a>
             <a href="/about">About</a>
             <a href="/upgrade">Upgrade</a>
         </nav>
         <div class="status-container">
+            <!--
             <div class="status-item">
                 <span class="status-dot" id="bambuDot"></span>B
             </div>
+            -->
             <div class="status-item">
                 <span class="status-dot" id="spoolmanDot"></span>S
             </div>
@@ -48,7 +50,7 @@
 
     <div class="content">
         <h1>Scale Configuration Page</h1>
-        
+
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Sacle Calibration</h5>
@@ -86,7 +88,7 @@
 
         function connectWebSocket() {
             ws = new WebSocket(`ws://${window.location.hostname}/ws`);
-            
+
             ws.onopen = () => {
                 console.log('WebSocket verbunden');
                 statusMessage.innerHTML = 'Scale connected';
